# geometry-modules

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/modules/point/: CMakeLists.txt  point.cpp  point.ixx  point_formatters.ixx  point_functions.cpp  point_functions.ixx  point_globalvars.ixx  point_types.ixx
